# andor2k

./: LICENSE  configure.ac
examples/: get_temperature_info.cpp
script/: decmprss_b64z2.py  make_dummy_fits.py
src/: Makefile.am  abort_listener.cpp  abort_listener.hpp  acquisition_reporter.cpp  acquisition_reporter.hpp  acquisition_series_reporter.cpp  acquisition_series_reporter.hpp  andor2k.cpp  andor2k.hpp  andor2kd.hpp  andor_time_utils.cpp  andor_time_utils.hpp  andor_tools.cpp  ap_base64.cpp  ap_base64.h  ar_fits_header.cpp  ar_fits_header.hpp  aristarchos.cpp  aristarchos.cpp.old  aristarchos.hpp  aristarchos.hpp.old  cbase64.cpp  cbase64.hpp  ccd_params.cpp  ccd_params.hpp  cdecode.cpp.old  cdecode.h  client_socket.hpp  cmd_parser.cpp  coarse_image_time.cpp  cooling.cpp  cpp_socket.cpp  cpp_socket.hpp  cpp_socket_old.cpp  cpp_socket_old.hpp  cppfits.hpp  date_utils.hpp  fits_filename.cpp  fits_filename.hpp  fits_filenames.cpp  (+23 more)
test/: Makefile.am  fccmsg  fccmsg.1  fccmsg.2  testClientSocket  testCmdParser  testFitsFilename  testServerSocket  test_client_socket.cpp  test_cmd_parser.cpp  test_fcc.cpp  test_fits_filename.cpp  test_fits_header.cpp  test_fnano.cc  test_ntp_time.cpp  test_parallel_abort.cpp  test_parsing_fcc_response.cpp  test_poll_server.cpp  test_poll_server1.cpp  test_pts.cpp  test_read_parameter_file.cpp  test_server_socket.cpp  test_server_socket1.cpp  test_time_utils.cpp
