##
##  The library will be called: (lib)"helmosandor2k".
## ------------------------------------------------
##
lib_LTLIBRARIES = libhelmosandor2k.la

##
##  Only use the following flags for debuging purposes.
## ----------------------------------------------------
##
libhelmosandor2k_la_CXXFLAGS = \
	-std=c++17 \
	-g \
	-pg \
	-Wall \
	-Wextra \
	-Werror \
	-pedantic \
	-W \
	-Wshadow \
	-Winline \
	-Wdisabled-optimization \
	-march=native \
	-DDEBUG

MCXXFLAGS = \
	-std=c++17 \
	-g \
	-pg \
	-Wall \
	-Wextra \
	-Werror \
	-pedantic \
	-W \
	-Wshadow \
	-Winline \
	-Wdisabled-optimization \
	-march=native \
	-DDEBUG

##
##  Header files (distributed) installed in /$(includedir)/$(package name).
## ------------------------------------------------------------------------
##
pkginclude_HEADERS = \
        cpp_socket.hpp \
		andor_time_utils.hpp \
		andor2k.hpp \
		cppfits.hpp \
		andor2kd.hpp \
		fits_header.hpp \
        aristarchos.hpp \
	get_exposure.hpp \
	acquisition_reporter.hpp \
	abort_listener.hpp \
	cbase64.hpp

##
##  Source files (distributed).
## ----------------------------
##
dist_libhelmosandor2k_la_SOURCES = \
    andor2k.cpp \
	andor_time_utils.cpp \
	coarse_image_time.cpp \
	cpp_socket.cpp \
	cmd_parser.cpp \
	andor_tools.cpp \
	set_readout_mode.cpp \
	set_acquisition_mode.cpp \
	cooling.cpp \
	fits_filenames.cpp \
	sys_shutdown.cpp \
	usage.cpp \
	get_acquisition.cpp \
	set_acquisition.cpp \
	resolve_image_parameters.cpp \
    vhsspeed.cpp \
	fits_header.cpp \
    aristarchos.cpp \
    socket_sprintf.cpp \
    cbase64.cpp \
    get_ntp_time.cpp \
    get_single_scan.cpp
